# rust-study

./: .gitignore  README.md
220908_01_cryptography_buchanan/: readme.md
a_distributed_engine/: .dockerignore  Cargo.toml  Makefile  docker-compose.yaml  docker-compose.yml  notes.sh  readme.md
a_distributed_engine/c_integration/: Cargo.toml  readme.md
a_distributed_engine/c_integration/src/: main.rs
a_distributed_engine/dustr/: .gitignore  Cargo.toml
a_distributed_engine/dustr/src/: lib.rs
a_distributed_engine/dustr/src/common/: mod.rs
a_distributed_engine/dustr/src/components/: mod.rs
a_distributed_engine/dustr/src/components/worker/app/: entry.rs
a_distributed_engine/dustr/src/core/: mod.rs
a_distributed_engine/dustr/src/core/manager/: cli.rs  endpoints.rs  experiments.rs  mod.rs
a_distributed_engine/dustr/src/core/manager/send_payload/: experiments.rs  mod.rs  payload.rs
a_distributed_engine/dustr/src/core/worker/: mod.rs
a_distributed_engine/dustr/src/experiments/: project.rs
a_distributed_engine/ml_models/: Cargo.toml
a_distributed_engine/ml_models/python/: cluster_generation.ipynb  cluster_smoke_check.npy  file01.py  file02.py  finalized_model.sav  finalized_model_2.sav  notes.sh  requirements.txt
a_distributed_engine/ml_models/src/: main.rs
a_distributed_engine/ml_models/src/k_means/: file01.rs  mod.rs
a_workflow_orchestrator/: a_workflow_orchestrator.code-workspace  notes.sh  readme.md
book-cryptography-wade-trappe/: readme.md
book-flitton-rust-web-programming/: readme.md
book-gruber-rust-web-development/: readme.md
(+344 files in other folders)
