[package]
name = "dustr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
