[package]
name = "ml_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
ndarray = { version = "0.13", features = ["approx"] }
ndarray-rand = "0.11"
ndarray-stats = "0.3"
approx = "0.3"
ndarray-npy = { version = "0.5", default-features = false }
